fix: do not show volume control until fetch

--- a/assets/app.html
+++ b/assets/app.html
@@ -261,7 +261,7 @@
         </svg>
       </button>
     </nav>
-    <input id=control-volume type="range" min=0 max=100 step=1>
+    <input id="control-volume" class="disabled" type="range" min=0 max=100 step=1>
     <button class=control-button id=control-repeat class="repeat on">
       <svg width="200" height="200" viewBox="0 0 200 200">
         <path class=fill d="M 85,25 115,40 85,55 z"/>
