feature: chrome app manifest.json

--- a/assets/app.html
+++ b/assets/app.html
@@ -6,6 +6,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="Music">
+<link rel="manifest" href="/assets/manifest.json">
 <link rel="apple-touch-icon" sizes="192x192" href="/assets/app.png">
 <link rel="apple-touch-startup-image" href="/assets/w.png">
 <meta name="mobile-web-app-capable" content="yes">
