feature: show go version

--- a/assets/app.html
+++ b/assets/app.html
@@ -176,13 +176,22 @@
       <ul class=note>
         <li>
           <div class="description">Version:</div>
-          <div id=version class="value">0.0.0</div>
+          <div id=version class="value"></div>
         <li>
           <div class="description">Website:</div>
           <div class="value"><a class=value href="https://github.com/meiraka/vv">https://github.com/meiraka/vv</a></div>
         <li>
           <div class="description">License:</div>
           <div class="value"><a class=value href="https://github.com/meiraka/vv/blob/master/LICENSE">MIT License</a></div>
+      </ul>
+      <h1>compiler</h1>
+      <ul class=note>
+        <li>
+          <div class="description">Version:</div>
+          <div id=go-version class="value"></div>
+        <li>
+          <div class="description">License:</div>
+          <div class="value"><a class=value href="https://golang.org/LICENSE">BSD license</a></div>
       </ul>
       <h1>renderer</h1>
       <ul class=note>
