--- a/assets/app.html
+++ b/assets/app.html
@@ -172,31 +172,61 @@
           <div class="description">websockets:</div><div class="value" id=stat-websockets></div>
     </article>
     <article id="system-info" class="tab-page">
-      <h1>vv</h1>
+      <h1>Version</h1>
       <ul class=note>
         <li>
-          <div class="description">Version:</div>
+          <div class="description">vv</div>
           <div id=version class="value"></div>
         <li>
-          <div class="description">Website:</div>
-          <div class="value"><a class=value href="https://github.com/meiraka/vv">https://github.com/meiraka/vv</a></div>
-        <li>
-          <div class="description">License:</div>
-          <div class="value"><a class=value href="https://github.com/meiraka/vv/blob/master/LICENSE">MIT License</a></div>
-      </ul>
-      <h1>compiler</h1>
-      <ul class=note>
-        <li>
-          <div class="description">Version:</div>
+          <div class="description">go</div>
           <div id=go-version class="value"></div>
-        <li>
-          <div class="description">License:</div>
-          <div class="value"><a class=value href="https://golang.org/LICENSE">BSD license</a></div>
       </ul>
-      <h1>renderer</h1>
-      <ul class=note>
+      <h1>Renderer</h1>
+      <ul class="information-list">
         <li>
-          <div id=user-agent class="value"></div>
+          <div class="information-box" id=user-agent class="value"></div>
+      </ul>
+      <h1>This Application</h1>
+      <ul class="information-list">
+        <li class="license-box information-box">
+          <span class="product-name">vv</span>
+          <div class="link">
+            <a class="product-link" href="https://github.com/meiraka/vv">https://github.com/meiraka/vv</a>
+            <a class="license-link" href="https://github.com/meiraka/vv/blob/master/LICENSE">MIT license</a>
+          </div>
+      </ul>
+      <h1>Credits</h1>
+      <ul class="information-list">
+        <li class="license-box information-box">
+          <span class="product-name">The Go Programming Language</span>
+          <div class="link">
+            <a class="product-link" href="https://golang.org/">https://golang.org/</a>
+            <a class="license-link" href="https://golang.org/LICENSE">BSD 3-clause license</a>
+          </div>
+        <li class="license-box information-box">
+          <span class="product-name">github.com/spf13/pflag</span>
+          <div class="link">
+            <a class="product-link" href="https://github.com/spf13/pflag">https://github.com/spf13/pflag</a>
+            <a class="license-link" href="https://github.com/spf13/pflag/blob/master/LICENSE">BSD 3-clause license</a>
+          </div>
+        <li class="license-box information-box">
+          <span class="product-name">github.com/spf13/viper</span>
+          <div class="link">
+            <a class="product-link" href="https://github.com/spf13/viper">https://github.com/spf13/viper</a>
+            <a class="license-link" href="https://github.com/spf13/viper/blob/master/LICENSE">MIT license</a>
+          </div>
+        <li class="license-box information-box">
+          <span class="product-name">github.com/fhs/gompd</span>
+          <div class="link">
+            <a class="product-link" href="https://github.com/fhs/gompd">https://github.com/fhs/gompd</a>
+            <a class="license-link" href="https://github.com/fhs/gompd/blob/master/LICENSE">MIT license</a>
+          </div>
+        <li class="license-box information-box">
+          <span class="product-name">github.com/gorilla/websocket</span>
+          <div class="link">
+            <a class="product-link" href="https://github.com/gorilla/websocket">https://github.com/gorilla/websocket</a>
+            <a class="license-link" href="https://github.com/gorilla/websocket/blob/master/LICENSE">BSD 2-clause license</a>
+          </div>
       </ul>
     </article>
   </div>
