--- a/assets/app.html
+++ b/assets/app.html
@@ -138,8 +138,8 @@
       </article>
       <article>
         <h3 class="note-header" id="volume-header">Volume</h3>
-        <article class="sub-article">
-          <ul class="note" id="volume-all">
+        <article class="sub-article" id="volume-all">
+          <ul class="note">
             <li class="note-line key-value">
               <div class="note-description">Show volume nob</div>
               <div class="note-value switch"><input type="checkbox" id="volume-show"><label for="volume-show"></label></div>
