fix: css header size

--- a/assets/app.html
+++ b/assets/app.html
@@ -74,7 +74,7 @@
   </nav>
   <div class="scrollable">
     <article id="system-preferences" class="tab-page">
-      <h1>Preferences</h1>
+      <h1 class="system-header">Preferences</h1>
       <article>
         <h3 class="note-header">System</h3>
         <article class="sub-article">
@@ -164,7 +164,7 @@
       </article>
     </article>
     <article id="system-stats" class="tab-page">
-      <h1>mpd</h1>
+      <h1 class="system-header">mpd</h1>
       <article class="sub-article">
         <ul class="note">
           <li class="note-line key-value">
@@ -186,7 +186,7 @@
       </article>
     </article>
     <article id="system-info" class="tab-page">
-      <h1>This Application</h1>
+      <h1 class="system-header">This Application</h1>
       <ul class="information-list">
         <li class="license-box information-box">
           <div>
@@ -198,7 +198,7 @@
             <a class="license-link" href="https://github.com/meiraka/vv/blob/master/LICENSE">MIT license</a>
           </div>
       </ul>
-      <h1>Compiler</h1>
+      <h1 class="system-header">Compiler</h1>
       <ul class="information-list">
         <li class="license-box information-box">
           <div>
@@ -209,12 +209,12 @@
             <a class="product-link" href="https://golang.org/">https://golang.org/</a>
             <a class="license-link" href="https://golang.org/LICENSE">BSD 3-clause license</a>
       </ul>
-      <h1>Renderer</h1>
+      <h1 class="system-header">Renderer</h1>
       <ul class="information-list">
         <li>
           <div class="information-box" id=user-agent></div>
       </ul>
-      <h1>Credits</h1>
+      <h1 class="system-header">Credits</h1>
       <ul class="information-list">
         <li class="license-box information-box">
           <div>
@@ -263,8 +263,8 @@
         <path class="close-button stroke" d="M 40,40 160,160 M 160,40 40,160"/>
       </svg>
     </button>
-    <h1>Help</h1>
-    <h2>Keyboard Shortcuts</h2>
+    <h1 class="modal-header">Help</h1>
+    <h2 class="modal-header-sub">Keyboard Shortcuts</h2>
     <table class=modal-window-table>
       <tr class=modal-window-tableitem>
         <th class=modal-window-tablekey><span class=keychar>space</span></th><td id=version class=modal-window-table-value>play or pause song</td>
