--- a/assets/app.html
+++ b/assets/app.html
@@ -208,6 +208,7 @@
           <div class="link">
             <a class="product-link" href="https://golang.org/">https://golang.org/</a>
             <a class="license-link" href="https://golang.org/LICENSE">BSD 3-clause license</a>
+          </div>
       </ul>
       <h1 class="system-header">Renderer</h1>
       <ul class="information-list">
