refactoring: light color

--- a/assets/app.html
+++ b/assets/app.html
@@ -15,7 +15,7 @@
 <script src="/assets/app.js"></script>
 <title>vv</title>
 </head>
-<body>
+<body class="light">
 <header>
   <ol id="menu-list" class="header-items">
     <li id=menu-back class="header-item iconlabel">
