refactoring: css base/layout/module

--- a/assets/app.html
+++ b/assets/app.html
@@ -255,10 +255,10 @@
 </section>
 <section id="popup-box">
 </section>
-<div id=modal-background class=modal-background>
+<div id=modal-background class="modal-background hide">
 </div>
-<div id=modal-outer class=modal-outer>
-  <div id=modal-help class=modal-window>
+<div id=modal-outer class="modal-outer hide">
+  <div id=modal-help class="modal-window hide">
     <button id=modal-help-close class=modal-close type="button" value="">
       <svg class="close-icon" width="30" height="30" viewBox="0 0 200 200">
         <path class="close-button stroke" d="M 40,40 160,160 M 160,40 40,160"/>
