--- a/assets/app.html
+++ b/assets/app.html
@@ -64,194 +64,194 @@
     </div>
   </div>
 </section>
-<section id="system" class="full tabbed">
-  <nav id="system-nav" class="tab">
-    <div class="tab-items">
-      <button class="tab-item" id="system-tab-preferences" type="button">Preferences</button>
-      <button class="tab-item" id="system-tab-stats" type="button">Stats</button>
-      <button class="tab-item" id="system-tab-info" type="button">Information</button>
+<section id="system" class="full system">
+  <div class="system-box">
+    <nav id="system-nav" class="system-nav">
+      <button class="system-nav-item" id="system-tab-preferences" type="button">Preferences</button>
+      <button class="system-nav-item" id="system-tab-stats" type="button">Stats</button>
+      <button class="system-nav-item" id="system-tab-info" type="button">Information</button>
+    </nav>
+    <div class="scrollable system-articles">
+      <article id="system-preferences" class="system-article">
+        <h1 class="system-header">Preferences</h1>
+        <article>
+          <h3 class="note-header">System</h3>
+          <article class="sub-article">
+            <ul class="note">
+              <li class="note-line key-value">
+                <button id=system-reload class="note-value button-simple" type="button">Reload Application</button>
+            </ul>
+          </article>
+        </article>
+        <article>
+          <h3 class="note-header">Appearance</h3>
+          <article class="sub-article">
+            <ul class="note">
+              <li class="note-line key-value">
+                <div class="note-description">Color threshold</div>
+                <div class="note-value-expand"><input id=appearance-color-threshold type="range" min=0 max=256 step=1 class="config-range"></div>
+              <li class="note-line key-value" id="config-appearance-animation">
+                <div class="note-description">Animation</div>
+                <div class="note-value switch"><input type="checkbox" id="appearance-animation"><label for="appearance-animation"></label></div>
+              <li class="note-line key-value">
+                <div class="note-description">Background image</div>
+                <div class="note-value switch"><input type="checkbox" id="appearance-background-image"><label for="appearance-background-image"></label></div>
+              <li class="note-line key-value">
+                <div class="note-description">Background image blur</div>
+                <select class="tool-select value" id="appearance-background-image-blur">
+                  <option value="0">0</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="4">4</option>
+                  <option value="8">8</option>
+                  <option value="16">16</option>
+                  <option value="32">32</option>
+                </select>
+              <li class="note-line key-value">
+                <div class="note-description">Circled image</div>
+                <div class="note-value switch"><input type="checkbox" id="appearance-circled-image"><label for="appearance-circled-image"></label></div>
+              <li class="note-line key-value" id="config-appearance-auto-hide-scrollbar">
+                <div class="note-description">Auto hide scrollbar</div>
+                <div class="note-value switch"><input type="checkbox" id="appearance-auto-hide-scrollbar"><label for="appearance-auto-hide-scrollbar"></label></div>
+            </ul>
+          </article>
+        </article>
+        <article>
+          <h3 class="note-header">Library</h3>
+          <article class="sub-article">
+            <ul class="note">
+              <li class="note-line key-value">
+                <button id=library-rescan class="note-value button-simple" type="button">Rescan</button>
+            </ul>
+          </article>
+        </article>
+        <article>
+          <h3 class="note-header">Playback</h3>
+          <article class="sub-article">
+            <ul class="note">
+              <li class="note-line key-value">
+                <div class="note-description">Listview follows playback</div>
+                <div class="note-value switch"><input type="checkbox" id="playback-view-follow"><label for="playback-view-follow"></label></div>
+            </ul>
+          </article>
+        </article>
+        <article>
+          <h3 class="note-header" id="volume-header">Volume</h3>
+          <article class="sub-article" id="volume-all">
+            <ul class="note">
+              <li class="note-line key-value">
+                <div class="note-description">Show volume nob</div>
+                <div class="note-value switch"><input type="checkbox" id="volume-show"><label for="volume-show"></label></div>
+              <li class="note-line key-value">
+                <div class="note-description">Max volume</div>
+                <select class="tool-select value" id="volume-max">
+                  <option value="50">50</option>
+                  <option value="60">60</option>
+                  <option value="70">70</option>
+                  <option value="80">80</option>
+                  <option value="90">90</option>
+                  <option value="100">100</option>
+                </select>
+            </ul>
+          </article>
+        </article>
+        <article>
+          <h3 class="note-header">Devices</h3>
+          <article class="sub-article">
+            <ul class="note" id="devices"></ul>
+          </article>
+        </article>
+      </article>
+      <article id="system-stats" class="system-article">
+        <h1 class="system-header">mpd</h1>
+        <article class="sub-article">
+          <ul class="note">
+            <li class="note-line key-value">
+              <div class="note-description">tracks:</div><div class="note-value" id=stat-tracks></div>
+            <li class="note-line key-value">
+              <div class="note-description">artists:</div><div class="note-value" id=stat-artists></div>
+            <li class="note-line key-value">
+              <div class="note-description">albums:</div><div class="note-value" id=stat-albums></div>
+            <li class="note-line key-value">
+              <div class="note-description">total length:</div><div class="note-value" id=stat-db-playtime></div>
+            <li class="note-line key-value">
+              <div class="note-description">total playtime:</div><div class="note-value" id=stat-playtime></div>
+            <li class="note-line key-value">
+              <div class="note-description">uptime:</div><div class="note-value" id=stat-uptime></div>
+            <li class="note-line key-value">
+              <div class="note-description">last library update:</div><div class="note-value" id=stat-db-update></div>
+            <li class="note-line key-value">
+              <div class="note-description">websockets:</div><div class="note-value" id=stat-websockets></div>
+        </article>
+      </article>
+      <article id="system-info" class="system-article">
+        <h1 class="system-header">This Application</h1>
+        <ul class="information-list">
+          <li class="license-box information-box">
+            <div>
+              <span class="product-name">vv</span>
+              <span class="product-version" id="version"></span>
+            </div>
+            <div class="link">
+              <a class="product-link" href="https://github.com/meiraka/vv">https://github.com/meiraka/vv</a>
+              <a class="license-link" href="https://github.com/meiraka/vv/blob/master/LICENSE">MIT license</a>
+            </div>
+        </ul>
+        <h1 class="system-header">Compiler</h1>
+        <ul class="information-list">
+          <li class="license-box information-box">
+            <div>
+              <span class="product-name">The Go Programming Language</span>
+              <span class="product-version" id="go-version"></span>
+            </div>
+            <div class="link">
+              <a class="product-link" href="https://golang.org/">https://golang.org/</a>
+              <a class="license-link" href="https://golang.org/LICENSE">BSD 3-clause license</a>
+            </div>
+        </ul>
+        <h1 class="system-header">Renderer</h1>
+        <ul class="information-list">
+          <li>
+            <div class="information-box" id=user-agent></div>
+        </ul>
+        <h1 class="system-header">Credits</h1>
+        <ul class="information-list">
+          <li class="license-box information-box">
+            <div>
+              <span class="product-name">github.com/spf13/pflag</span>
+            </div>
+            <div class="link">
+              <a class="product-link" href="https://github.com/spf13/pflag">https://github.com/spf13/pflag</a>
+              <a class="license-link" href="https://github.com/spf13/pflag/blob/master/LICENSE">BSD 3-clause license</a>
+            </div>
+          <li class="license-box information-box">
+            <div>
+              <span class="product-name">github.com/spf13/viper</span>
+            </div>
+            <div class="link">
+              <a class="product-link" href="https://github.com/spf13/viper">https://github.com/spf13/viper</a>
+              <a class="license-link" href="https://github.com/spf13/viper/blob/master/LICENSE">MIT license</a>
+            </div>
+          <li class="license-box information-box">
+            <div>
+              <span class="product-name">github.com/fhs/gompd</span>
+            </div>
+            <div class="link">
+              <a class="product-link" href="https://github.com/fhs/gompd">https://github.com/fhs/gompd</a>
+              <a class="license-link" href="https://github.com/fhs/gompd/blob/master/LICENSE">MIT license</a>
+            </div>
+          <li class="license-box information-box">
+            <div>
+              <span class="product-name">github.com/gorilla/websocket</span>
+            </div>
+            <div class="link">
+              <a class="product-link" href="https://github.com/gorilla/websocket">https://github.com/gorilla/websocket</a>
+              <a class="license-link" href="https://github.com/gorilla/websocket/blob/master/LICENSE">BSD 2-clause license</a>
+            </div>
+          </div>
+        </ul>
+      </article>
     </div>
-  </nav>
-  <div class="scrollable">
-    <article id="system-preferences" class="tab-page">
-      <h1 class="system-header">Preferences</h1>
-      <article>
-        <h3 class="note-header">System</h3>
-        <article class="sub-article">
-          <ul class="note">
-            <li class="note-line key-value">
-              <button id=system-reload class="note-value button-simple" type="button">Reload Application</button>
-          </ul>
-        </article>
-      </article>
-      <article>
-        <h3 class="note-header">Appearance</h3>
-        <article class="sub-article">
-          <ul class="note">
-            <li class="note-line key-value">
-              <div class="note-description">Color threshold</div>
-              <div class="note-value-expand"><input id=appearance-color-threshold type="range" min=0 max=256 step=1 class="config-range"></div>
-            <li class="note-line key-value" id="config-appearance-animation">
-              <div class="note-description">Animation</div>
-              <div class="note-value switch"><input type="checkbox" id="appearance-animation"><label for="appearance-animation"></label></div>
-            <li class="note-line key-value">
-              <div class="note-description">Background image</div>
-              <div class="note-value switch"><input type="checkbox" id="appearance-background-image"><label for="appearance-background-image"></label></div>
-            <li class="note-line key-value">
-              <div class="note-description">Background image blur</div>
-              <select class="tool-select value" id="appearance-background-image-blur">
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="4">4</option>
-                <option value="8">8</option>
-                <option value="16">16</option>
-                <option value="32">32</option>
-              </select>
-            <li class="note-line key-value">
-              <div class="note-description">Circled image</div>
-              <div class="note-value switch"><input type="checkbox" id="appearance-circled-image"><label for="appearance-circled-image"></label></div>
-            <li class="note-line key-value" id="config-appearance-auto-hide-scrollbar">
-              <div class="note-description">Auto hide scrollbar</div>
-              <div class="note-value switch"><input type="checkbox" id="appearance-auto-hide-scrollbar"><label for="appearance-auto-hide-scrollbar"></label></div>
-          </ul>
-        </article>
-      </article>
-      <article>
-        <h3 class="note-header">Library</h3>
-        <article class="sub-article">
-          <ul class="note">
-            <li class="note-line key-value">
-              <button id=library-rescan class="note-value button-simple" type="button">Rescan</button>
-          </ul>
-        </article>
-      </article>
-      <article>
-        <h3 class="note-header">Playback</h3>
-        <article class="sub-article">
-          <ul class="note">
-            <li class="note-line key-value">
-              <div class="note-description">Listview follows playback</div>
-              <div class="note-value switch"><input type="checkbox" id="playback-view-follow"><label for="playback-view-follow"></label></div>
-          </ul>
-        </article>
-      </article>
-      <article>
-        <h3 class="note-header" id="volume-header">Volume</h3>
-        <article class="sub-article" id="volume-all">
-          <ul class="note">
-            <li class="note-line key-value">
-              <div class="note-description">Show volume nob</div>
-              <div class="note-value switch"><input type="checkbox" id="volume-show"><label for="volume-show"></label></div>
-            <li class="note-line key-value">
-              <div class="note-description">Max volume</div>
-              <select class="tool-select value" id="volume-max">
-                <option value="50">50</option>
-                <option value="60">60</option>
-                <option value="70">70</option>
-                <option value="80">80</option>
-                <option value="90">90</option>
-                <option value="100">100</option>
-              </select>
-          </ul>
-        </article>
-      </article>
-      <article>
-        <h3 class="note-header">Devices</h3>
-        <article class="sub-article">
-          <ul class="note" id="devices"></ul>
-        </article>
-      </article>
-    </article>
-    <article id="system-stats" class="tab-page">
-      <h1 class="system-header">mpd</h1>
-      <article class="sub-article">
-        <ul class="note">
-          <li class="note-line key-value">
-            <div class="note-description">tracks:</div><div class="note-value" id=stat-tracks></div>
-          <li class="note-line key-value">
-            <div class="note-description">artists:</div><div class="note-value" id=stat-artists></div>
-          <li class="note-line key-value">
-            <div class="note-description">albums:</div><div class="note-value" id=stat-albums></div>
-          <li class="note-line key-value">
-            <div class="note-description">total length:</div><div class="note-value" id=stat-db-playtime></div>
-          <li class="note-line key-value">
-            <div class="note-description">total playtime:</div><div class="note-value" id=stat-playtime></div>
-          <li class="note-line key-value">
-            <div class="note-description">uptime:</div><div class="note-value" id=stat-uptime></div>
-          <li class="note-line key-value">
-            <div class="note-description">last library update:</div><div class="note-value" id=stat-db-update></div>
-          <li class="note-line key-value">
-            <div class="note-description">websockets:</div><div class="note-value" id=stat-websockets></div>
-      </article>
-    </article>
-    <article id="system-info" class="tab-page">
-      <h1 class="system-header">This Application</h1>
-      <ul class="information-list">
-        <li class="license-box information-box">
-          <div>
-            <span class="product-name">vv</span>
-            <span class="product-version" id="version"></span>
-          </div>
-          <div class="link">
-            <a class="product-link" href="https://github.com/meiraka/vv">https://github.com/meiraka/vv</a>
-            <a class="license-link" href="https://github.com/meiraka/vv/blob/master/LICENSE">MIT license</a>
-          </div>
-      </ul>
-      <h1 class="system-header">Compiler</h1>
-      <ul class="information-list">
-        <li class="license-box information-box">
-          <div>
-            <span class="product-name">The Go Programming Language</span>
-            <span class="product-version" id="go-version"></span>
-          </div>
-          <div class="link">
-            <a class="product-link" href="https://golang.org/">https://golang.org/</a>
-            <a class="license-link" href="https://golang.org/LICENSE">BSD 3-clause license</a>
-          </div>
-      </ul>
-      <h1 class="system-header">Renderer</h1>
-      <ul class="information-list">
-        <li>
-          <div class="information-box" id=user-agent></div>
-      </ul>
-      <h1 class="system-header">Credits</h1>
-      <ul class="information-list">
-        <li class="license-box information-box">
-          <div>
-            <span class="product-name">github.com/spf13/pflag</span>
-          </div>
-          <div class="link">
-            <a class="product-link" href="https://github.com/spf13/pflag">https://github.com/spf13/pflag</a>
-            <a class="license-link" href="https://github.com/spf13/pflag/blob/master/LICENSE">BSD 3-clause license</a>
-          </div>
-        <li class="license-box information-box">
-          <div>
-            <span class="product-name">github.com/spf13/viper</span>
-          </div>
-          <div class="link">
-            <a class="product-link" href="https://github.com/spf13/viper">https://github.com/spf13/viper</a>
-            <a class="license-link" href="https://github.com/spf13/viper/blob/master/LICENSE">MIT license</a>
-          </div>
-        <li class="license-box information-box">
-          <div>
-            <span class="product-name">github.com/fhs/gompd</span>
-          </div>
-          <div class="link">
-            <a class="product-link" href="https://github.com/fhs/gompd">https://github.com/fhs/gompd</a>
-            <a class="license-link" href="https://github.com/fhs/gompd/blob/master/LICENSE">MIT license</a>
-          </div>
-        <li class="license-box information-box">
-          <div>
-            <span class="product-name">github.com/gorilla/websocket</span>
-          </div>
-          <div class="link">
-            <a class="product-link" href="https://github.com/gorilla/websocket">https://github.com/gorilla/websocket</a>
-            <a class="license-link" href="https://github.com/gorilla/websocket/blob/master/LICENSE">BSD 2-clause license</a>
-          </div>
-      </ul>
-    </article>
-  </div>
 </section>
 <section id="popup-box">
 </section>
