--- a/assets/app.html
+++ b/assets/app.html
@@ -17,18 +17,22 @@
 </head>
 <body class="light">
 <header>
-  <ol id="menu-list" class="header-items">
-    <li id=menu-back class="header-item iconlabel">
-      <svg class="header-icon" width="32" height="32" viewBox="0 0 200 200">
-        <path class="stroke" d="M 40,100 100,40 160,40 160,160 100,160 z"/>
-      </svg>
-      <span id="menu-back-content" class="header-label"></span>
-    <li id=menu-main class="header-item icon">
-      <svg class=header-icon width="32" height="32" viewBox="0 0 200 200">
+  <nav id="menu-list" class="header-items">
+    <button type="button" id=menu-back class="header-item header-iconlabel">
+      <div class="header-item-iconlabel">
+        <svg class="header-item-icon" width="32" height="32" viewBox="0 0 200 200">
+          <path class="stroke" d="M 40,100 100,40 160,40 160,160 100,160 z"/>
+        </svg>
+        <span id="menu-back-content" class="header-item-label"></span>
+      </div>
+    </button>
+    <button type="button" id=menu-main class="header-item">
+      <svg class=header-item-icon width="32" height="32" viewBox="0 0 200 200">
         <path class="stroke" d="M 100,40 160,100 160,160 40,160 40,100 z"/>
       </svg>
-    <li id=menu-system class="header-item icon">
-      <svg class=header-icon width="32" height="32" viewBox="0 0 200 200">
+    </button>
+    <button type="button" id=menu-system class="header-item">
+      <svg class=header-item-icon width="32" height="32" viewBox="0 0 200 200">
         <path class="stroke"
          d="M 100,30 100,60 z
          M 100,170 100,140 z
@@ -42,7 +46,8 @@
          M 150,50 129,71 z
          M 150,150 129,129 z"/>
       </svg>
-  </ol>
+    </button>
+  </nav>
 </header>
 <div id="background" class=fit>
   <div id="background-image"></div>
