refactoring: list main system css selector

--- a/assets/app.html
+++ b/assets/app.html
@@ -53,18 +53,18 @@
   <div id="background-image"></div>
   <div id="background-overlay" class="fit background-overlay"></div>
 </div>
-<section id="list" class="full">
-  <ol id="list-items" class="note scrollable"></ol>
+<section id="list" class="full list">
+  <ol id="list-items" class="list-items scrollable"></ol>
 </section>
-<section id="main" class="full">
-  <div id="main-box">
-    <cite id=main-title>no title</cite>
-    <span id=main-artist>no artist</span>
-    <div id=main-cover>
-      <div id=main-cover-img></div>
-      <svg id=main-elapsed-circle width="200" height="200" viewBox="0 0 200 200">
+<section id="main" class="full main">
+  <div id="main-box" class="main-box">
+    <cite id="main-title" class="main-box-text main-box-title">no title</cite>
+    <span id="main-artist" class="main-box-text main-box-artist">no artist</span>
+    <div id="main-cover" class="main-cover">
+      <div id="main-cover-img" class="main-cover-img"></div>
+      <svg id="main-elapsed-circle" class="main-cover-circle" width="200" height="200" viewBox="0 0 200 200">
           <path id="main-elapsed-circle-active" class="stroke" d=""></path>
-          <path class="inactive stroke" d="M 100,10 L 100,10 A 90,90 0 0,1 100,190 L 100,190 A 90,90 0 0,1 100,10"></path>
+          <path class="main-cover-circle-inactive stroke" d="M 100,10 L 100,10 A 90,90 0 0,1 100,190 L 100,190 A 90,90 0 0,1 100,10"></path>
       </svg>
     </div>
   </div>
