refactoring: modal class name

--- a/assets/app.html
+++ b/assets/app.html
@@ -251,13 +251,13 @@
 </div>
 <div id=modal-outer class="modal-outer hide">
   <div id=modal-help class="modal-window hide">
-    <button id=modal-help-close class=modal-close type="button" value="">
-      <svg class="close-icon" width="30" height="30" viewBox="0 0 200 200">
+    <button id=modal-help-close class=modal-window-close type="button" value="">
+      <svg class="modal-window-close-icon" width="30" height="30" viewBox="0 0 200 200">
         <path class="close-button stroke" d="M 40,40 160,160 M 160,40 40,160"/>
       </svg>
     </button>
-    <h1 class="modal-header">Help</h1>
-    <h2 class="modal-header-sub">Keyboard Shortcuts</h2>
+    <h1 class="modal-window-header">Help</h1>
+    <h2 class="modal-window-header-sub">Keyboard Shortcuts</h2>
     <table class=modal-window-table>
       <tr class=modal-window-tableitem>
         <th class=modal-window-tablekey><span class=keychar>space</span></th><td id=version class=modal-window-table-value>play or pause song</td>
